Updated text content and links

--- a/index.html
+++ b/index.html
@@ -19,55 +19,70 @@
           <a href="#">About Me</a>
           <div class="dropdown dropdown1">
             <div class="bio">
-              <img src="https://logo.clearbit.com/wesbos.com" />
+              <img src="./profile-picture-sqr.png" />
               <p>
-                Wes Bos sure does love web development. He teaches things like
-                JavaScript, CSS and BBQ. Wait. BBQ isn't part of web
-                development. It should be though!
+                When I’m not finding new ways to be upside down or fan-girling
+                over animals, you’ll catch me nerding out over puzzles (looking
+                at you, NYT’s games), binging true crime and science podcasts,
+                or perfecting my latest coding project.
               </p>
             </div>
           </div>
         </li>
         <li>
-          <a href="#">Courses</a>
+          <a href="#">Projects</a>
           <ul class="dropdown courses">
             <li>
-              <span class="code">RFB</span>
-              <a href="https://ReactForBeginners.com">React For Beginners</a>
-            </li>
-            <li>
-              <span class="code">ES6</span>
-              <a href="https://ES6.io">ES6 For Everyone</a>
-            </li>
-            <li>
-              <span class="code">NODE</span>
-              <a href="https://LearnNode.com">Learn Node</a>
-            </li>
-            <li>
-              <span class="code">STPU</span>
-              <a href="https://SublimeTextBook.com">Sublime Text Power User</a>
-            </li>
-            <li>
-              <span class="code">WTF</span>
-              <a href="http://Flexbox.io">What The Flexbox?!</a>
-            </li>
-            <li>
-              <span class="code">GRID</span>
-              <a href="https://CSSGrid.io">CSS Grid</a>
-            </li>
-            <li>
-              <span class="code">LRX</span>
-              <a href="http://LearnRedux.com">Learn Redux</a>
-            </li>
-            <li>
-              <span class="code">CLPU</span>
-              <a href="http://CommandLinePowerUser.com"
-                >Command Line Power User</a
+              <span class="code">Portfolio</span>
+              <a href="https://lj-fryer.netlify.app/"
+                >See my Developer Portfolio</a
               >
             </li>
             <li>
-              <span class="code">MMD</span>
-              <a href="http://MasteringMarkdown.com">Mastering Markdown</a>
+              <span class="code">Code</span>
+              <a href="https://github.com/LJ-Fryer">Check out my code</a>
+            </li>
+            <li>
+              <span class="code">Netlify</span>
+              <a href="https://app.netlify.com/teams/lj-fryer/projects"
+                >See my hosted projects</a
+              >
+            </li>
+            <li>
+              <span class="code">5 Day Forecast</span>
+              <a href="https://ljf-weather-app.netlify.app/"
+                >React App with API</a
+              >
+            </li>
+            <li>
+              <span class="code">The Vocabulator</span>
+              <a href="https://vocabulator.netlify.app/"
+                >Dictionary App with API's</a
+              >
+            </li>
+            <li>
+              <span class="code">Landing Page</span>
+              <a href="https://ashtanga-yoga.netlify.app/"
+                >Blending Ashtanga Yoga with CSS</a
+              >
+            </li>
+            <li>
+              <span class="code">World Clock</span>
+              <a href="https://worldclock-lj.netlify.app/"
+                >Interactive App with dynamic time zones</a
+              >
+            </li>
+            <li>
+              <span class="code">AI Poem Generator</span>
+              <a href="https://poem-generator-ljf.netlify.app/"
+                >Featuring animations and a JavaScript plugin</a
+              >
+            </li>
+            <li>
+              <span class="code">Analogue Clock Face</span>
+              <a href="https://old-school-clock.netlify.app/"
+                >Integrating JavaScript and CSS</a
+              >
             </li>
           </ul>
         </li>
@@ -75,17 +90,29 @@
           <a href="#">Other Links</a>
           <ul class="dropdown dropdown3">
             <li>
-              <a class="button" href="http://twitter.com/wesbos">Twitter</a>
-            </li>
-            <li>
-              <a class="button" href="http://facebook.com/wesbos.developer"
-                >Facebook</a
+              <a class="button" href="https://www.instagram.com/coding.yogi.7/"
+                >Instagram</a
               >
             </li>
-            <li><a class="button" href="http://wesbos.com">Blog</a></li>
             <li>
-              <a class="button" href="http://wesbos.com/courses"
-                >Course Catalog</a
+              <a
+                class="button"
+                href="www.linkedin.com/in/linda-fryer
+
+"
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a
+                class="button"
+                href="https://www.shecodes.io/graduates/128619-linda-fryer"
+                >Certificates</a
+              >
+            </li>
+            <li>
+              <a class="button" href="https://lj-fryer.netlify.app/about"
+                >More About Me</a
               >
             </li>
           </ul>
