--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h2>Cool</h2>
     <nav class="top">
       <div class="dropdownBackground">
         <span class="arrow"></span>
@@ -19,7 +18,7 @@
           <a href="#">About Me</a>
           <div class="dropdown dropdown1">
             <div class="bio">
-              <img src="./profile-picture-sqr.png" />
+              <img src="./profile-picture-sqr-sm.png" />
               <p>
                 When I’m not finding new ways to be upside down or fan-girling
                 over animals, you’ll catch me nerding out over puzzles (looking
@@ -95,11 +94,7 @@
               >
             </li>
             <li>
-              <a
-                class="button"
-                href="www.linkedin.com/in/linda-fryer
-
-"
+              <a class="button" href="www.linkedin.com/in/linda-fryer"
                 >LinkedIn</a
               >
             </li>
@@ -111,8 +106,8 @@
               >
             </li>
             <li>
-              <a class="button" href="https://lj-fryer.netlify.app/about"
-                >More About Me</a
+              <a class="button" href="https://lj-fryer.netlify.app/contact"
+                >Contact Me</a
               >
             </li>
           </ul>
